@@ -102,6 +102,7 @@
 2020-09-15 catering.py thoroughly tested with seats tables, seems to operate smoothly now!
 2020-09-17 full_catering.backup in table tables_layout removed unused column barcodeID
 2020-09-17 catering.py in module seatsArrange unused tablelist list removed
-2020=09=17 catering.py gatering orderlines by switching employee fixed
+2020-09-17 catering.py gatering orderlines by switching employee fixed
+2020-09-18 catering.py disabled scanning after switching employee clients before selecting new employee.
 
 
